--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yelpcamp",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,7 @@
     "axios": "^1.2.0",
     "cloudinary": "^1.35.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
